--- a/nav.html
+++ b/nav.html
@@ -101,7 +101,28 @@
 
 
 
-
+    <!--    <div class="cookie-modal">-->
+    <!--        <button class="_close-cookie close-btn">-->
+    <!--            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+    <!--                <path d="M16 5.05L14.95 4L10 8.95L5.05 4L4 5.05L8.95 10L4 14.95L5.05 16L10 11.05L14.95 16L16 14.95L11.05 10L16 5.05Z" fill="#2E2C2F" />-->
+    <!--            </svg>-->
+    <!--        </button>-->
+    <!--        <div class="cookie-modal__grid">-->
+    <!--            <div class="cookie-modal__content">-->
+    <!--                <div class="cookie-modal__title">-->
+    <!--                    Мы используем cookies-->
+    <!--                </div>-->
+    <!--                <div class="cookie-modal__text">-->
+    <!--                    Конфиденциальность и файлы cookie: на этом сайте используются файлы cookie. Продолжая пользоваться сайтом, вы соглашаетесь с их использованием.-->
+    <!--                    <br>-->
+    <!--                    Дополнительную информацию, в том числе об управлении файлами cookie, можно найти <a href="">здесь</a>.-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <button class="_accept-cookie cookie-modal__btn btn btn-turquoise">-->
+    <!--                <span>Принять</span>-->
+    <!--            </button>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
 
     <div class="modal" id="Modal">
@@ -126,6 +147,23 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/main.min.js"></script>
 
+    <!--    <script>-->
+    <!--        let cookieModal = document.querySelector(".cookie-modal")-->
+    <!--        const isAgreeWithCookies = !localStorage.getItem("isAgreeWithCookies");-->
+    <!--        if(isAgreeWithCookies){-->
+    <!--            cookieModal.classList.add("_active")-->
+    <!--        }-->
+
+    <!--        if(cookieModal){-->
+    <!--            cookieModal.querySelector("._close-cookie").onclick = function () {-->
+    <!--                cookieModal.classList.remove("_active")-->
+    <!--            }-->
+    <!--            cookieModal.querySelector("._accept-cookie").onclick = function () {-->
+    <!--                localStorage.setItem("isAgreeWithCookies", "true");-->
+    <!--                cookieModal.classList.remove("_active")-->
+    <!--            }-->
+    <!--        }-->
+    <!--    </script>-->
 </body>
 
 </html>
