--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="m-page">
     <div class="wrapper">
-        <header class="header">
+        <header class="header header-index">
             <div class="header__inner">
                 <a href="" class="header__logo">
                     <img class="header__logo-img" src="img/logo2.webp" alt="">
