--- a/how-return.html
+++ b/how-return.html
@@ -1405,6 +1405,22 @@
                 </div>
             </div>
 
+            <div class="mob-footer">
+                <a href="" class="mob-footer__btn">
+                    <img src="img/menu-icon.svg" alt="">
+                    <span>Главная</span>
+                </a>
+                <button class="mob-footer__btn _toggle-catalog">
+                    <img src="img/menu-icon2.svg" alt="">
+                    <span>Каталог</span>
+                </button>
+                <button class="mob-footer__btn">
+                    <img src="img/menu-icon3.svg" alt="">
+                    <span>Корзина</span>
+                    <!--        <i></i>-->
+                </button>
+            </div>
+
         </footer>
     </div>
 
