--- a/order.html
+++ b/order.html
@@ -1261,12 +1261,26 @@
                                 </div>
 
                                 <div class="_mt16">
-                                    <a href="" class="m-banner">
-                                        <img src="img/delivery-banner.svg" alt="" class="_view1">
-                                        <img src="img/delivery-banner-tablet.svg" alt="" class="_view2">
-                                        <img src="img/delivery-banner-mob.svg" alt="" class="_view3">
-                                    </a>
-
+                                    <div class="delivery-info">
+                                        <div class="delivery-info__items _flex">
+                                            <a href="" class="delivery-info__item">
+                                                <img src="img/cdek2.svg" alt="">
+                                            </a>
+                                            <a href="" class="delivery-info__item">
+                                                <img src="img/yd.svg" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="delivery-info__text">
+                                            <div class="h4">
+                                                Бесплатная доставка
+                                            </div>
+                                            <div class="_mt8">
+                                                <div class="body-m gray-text">
+                                                    Доставим чехлы в любую точки России
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
