--- a/reviews.html
+++ b/reviews.html
@@ -1820,12 +1820,42 @@
 
             <div class="send-req m-section">
                 <div class="container">
-                    <a href="" class="m-banner">
-                        <img src="img/send-req.webp" alt="" class="_view1">
-                        <img src="img/send-req-tablet.webp" alt="" class="_view2">
-                        <img src="img/send-req-mob.webp" alt="" class="_view3">
-                    </a>
+                    <div class="has-question">
+                        <div class="has-question__col">
+                            <a href="" class="m-banner">
+                                <img src="img/has-question-text.svg" alt="" class="_view1">
+                                <img src="img/has-question-text-tablet.svg" alt="" class="_view2">
+                                <img src="img/has-question-text-mob.svg" alt="" class="_view3">
+                            </a>
 
+                            <div class="_mt40 _mt32-tablet _mt24-mob">
+                                <a href="tel:+79990552111" class="has-question__phone h2">
+                                    +7 (999) 055-2111
+                                </a>
+                                <div class="_mt16 _mt8-tablet">
+                                    <div class="body-m">
+                                        Пн-Вс: 09:00-20:00
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="has-question__col2">
+                            <div class="body-m">
+                                Или напишите нам в мессенджер
+                            </div>
+                            <div class="has-question__links">
+                                <a href="" class="has-question__link m-btn m-btn-white">
+                                    <img src="img/whatsapp2.svg" alt="">
+                                    <span>Помощь в Whatsapp</span>
+                                </a>
+                                <a href="" class="has-question__link m-btn m-btn-white">
+                                    <img src="img/max2.svg" alt="">
+                                    <span>Помощь в MAX</span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="img/has-question.webp" alt="" class="has-question__img">
+                    </div>
                 </div>
 
             </div>
